# robotiq_85_gripper

robotiq_85_description/meshes/collision/: kinova_robotiq_coupler.stl
robotiq_85_description/urdf/: robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro
robotiq_85_driver/: CMakeLists.txt  package.xml
robotiq_85_driver/launch/: gripper.launch
robotiq_85_driver/src/: gripper_services.cpp
robotiq_85_driver/src/robotiq_85/: gripper_io.py  robotiq_85_driver.py  robotiq_85_gripper_test.py
